FZ6 - Внутренние методы сделать private, улучшить алгоритм удаления нода, исправить тесты.